--- a/paper.bib
+++ b/paper.bib
@@ -1,4 +1,4 @@
-@article{(GenoFali2010,
+@article{GenoFali2010,
   title={KmL: k-means for longitudinal data},
   author={Genolini, C. and Falissard, B},
   journal={Computational Statistics},
