--- a/paper.bib
+++ b/paper.bib
@@ -1,192 +1,192 @@
-@article{GenoFali2010,
+@article{GenoFali:2010,
   title={KmL: k-means for longitudinal data},
   author={Genolini, C. and Falissard, B},
   journal={Computational Statistics},
-  volume={2},
-  number={3},
-  pages={317--328},
-  year={2011}
+  volume=2,
+  number=3,
+  pages={317-328},
+  year=2011
 }
 
-@article{Curman2015,
+@article{Curman:2015,
   title={Crime and place: a longitudinal examination of street segment patterns in Vancouver, BC},
-  author={Curman, ASN. and Andresen, MA. and Brantingham, PJ.},
+  author={Curman, A.S.N. and Andresen, M.A. and Brantingham, P.J.},
   journal={Journal of Quantitative Criminology},
-  volume={31},
-  number={1},
+  volume=31,
+  number=1,
   pages={127-147},
-  year={2015}
+  year=2015
 }
 
-@article{Andresen2017,
+@article{Andresen:2017,
   title={The trajectories of crime at places: understanding the patterns of disaggregated crime types},
   author={Andresen, MA. and Curman, AS. and Linning, SJ.},
   journal={Journal of Quantitative Criminology},
-  volume={33},
-  number={3},
-  pages={427--449},
-  year={2017}
-}
-
-@article{Weisburd2004,
-  title={Trajectories of Crime at Places: A Longitudinal Study of Street Segments in the City of Seattle},
-  author={Weisburd, D. and Bushway, S. and Lum, C. and Yang, S.},
-  journal={Criminology},
-  volume={42},
-  number={2},
-  pages={283--322},
-  year=2004
-}
-
-@article{Chavez2009,
-  title={Neighborhood dynamics of urban violence: Understanding the immigration connection},
-  author={Chavez, JM. and Griffiths, E.},
-  journal={Homicide Studies},
-  volume={13},
-  number={3},
-  pages={261--273},
-  year=2009
-}
-
-@article{Bannister2017,
-  title={Local variance in the crime drop: A longitudinal study of neighbourhoods in greater Glasgow, Scotland},
-  author={Bannister, J. and Bates, E. and Kearns, A.},
-  journal={British Journal of Criminology},
-  volume={58},
-  number={1},
-  pages={177--199},
+  volume=33,
+  number=3,
+  pages={427-449},
   year=2017
 }
 
-@article{Eze2019,
+@article{Weisburd:2004,
+  title={Trajectories of Crime at Places: A Longitudinal Study of Street Segments in the City of Seattle},
+  author={Weisburd, D. and Bushway, S. and Lum, C. and Yang, S.},
+  journal={Criminology},
+  volume=42,
+  number=2,
+  pages={283-322},
+  year=2004
+}
+
+@article{Chavez:2009,
+  title={Neighborhood dynamics of urban violence: Understanding the immigration connection},
+  author={Chavez, J.M. and Griffiths, E.},
+  journal={Homicide Studies},
+  volume=13,
+  number=3,
+  pages={261-273},
+  year=2009
+}
+
+@article{Bannister:2017,
+  title={Local variance in the crime drop: A longitudinal study of neighbourhoods in greater Glasgow, Scotland},
+  author={Bannister, J. and Bates, E. and Kearns, A.},
+  journal={British Journal of Criminology},
+  volume=58,
+  number=1,
+  pages={177-199},
+  year=2017
+}
+
+@article{Eze:2019,
   title={Exploring the longitudinal dynamics of herd BVD antibody test results using model-based clustering},
-  author={Eze, JI. and Innocent, GT. and Adam, K. and Huntley, S. and Gunn, GJ.},
+  author={Eze, J.I. and Innocent, G.T. and Adam, K. and Huntley, S. and Gunn, G.J.},
   journal={Scientific Reports},
-  volume={3},
-  number={11353},
-  pages={1--10},
+  volume=3,
+  number=11353,
+  pages={1-10},
   year=2019
 }
 
-@article{Griffith2004,
+@article{Griffith:2004,
   title={Communities, street guns and homicide trajectories in Chicago, 1980-1995: merging methods for examining homicide trends across space and time},
   author={Griffiths, E. and Chavez, JM.},
   journal={Criminology},
-  volume={42},
-  number={4},
-  pages={941--978},
-  year={2004}
+  volume=42,
+  number=4,
+  pages={941-978},
+  year=2004
 }
 
-@article{Celeux1992,
+@article{Celeux:1992,
   title={A classification EM algorithm for clustering and two stochastic versions},
   author={Celeux, G. and Govaert, G.},
   journal={Journal of Computational Statistics and Data Analysis},
-  volume={14},
-  number={3},
-  pages={315--332},
-  year={1992}
+  volume=14,
+  number=3,
+  pages={315-332},
+  year=1992
 }
 
-@article{Calinski1974,
+@article{Calinski:1974,
   title={A dendrite method for cluster analysis},
   author={Calinski, T. and Harabasz, J.},
   journal={Communications in Statistics-theory and Methods},
-  volume={3},
-  number={1},
-  pages={1--27},
-  year={1974}
+  volume=3,
+  number=1,
+  pages={1-27},
+  year=1974
 }
 
-@article{Rousseeuw1987,
+@article{Rousseeuw:1987,
   title={Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
   author={Rousseeuw, PJ.},
   journal={Journal of Computational and Applied Mathematics},
-  number={20},
-  pages={53--65},
-  year={1987}
+  number=20,
+  pages={53-65},
+  year=1987
 }
 
-@Book{ggplot2,
+@Book{ggplot2:2016,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
   publisher = {Springer-Verlag New York},
-  year = {2016},
-  isbn = {978-3-319-24277-4},
+  isbn = {9783319242774},
   url = {https://ggplot2.tidyverse.org},
+  year = 2016,
 }
 
-@article{Tarpey2003,
+@article{Tarpey:2003,
   title={Clustering functional data}
   author={Tarpey, T. and Kinateder, KKJ.},
   journal={Journal of Classification},
-  volume={20},
-  number={1},
-  pages={93--114},
-  year={2003}
+  volume=20,
+  number=1,
+  pages={93-114},
+  year=2003
 }
 
-@Book{Boor1978,
+@Book{Boor:1978,
   author = {De Boor, C.},
   title = {A Practical Guide to Splines},
   publisher = {Springer-Verlag New York},
-  year = {1978},
   isbn = {9780387953663},
   url = {https://www.springer.com/gp/book/9780387953663},
+  year = 1978
 }
 
-@Book{Schumaker2007,
-  author = {Schumaker, LL.},
+@Book{Schumaker:2007,
+  author = {Schumaker, L.L.},
   title = {Spline Functions: Basic Theory},
   publisher = {Cambridge University Press},
-  year = {2007},
   isbn = {9780521705127},
-  url = {https://doi.org/10.1017/CBO9780511618994}
+  url = {https://doi.org/10.1017/CBO9780511618994},
+  year = 2007
 }
 
-@book{agresti2010,
+@book{agresti:2010,
   title={Analysis of ordinal categorical data},
-  author={Agresti, Alan},
-  volume={656},
-  year={2010},
-  publisher={John Wiley \& Sons}
+  author={Agresti, A.},
+  volume=656,
+  publisher={John Wiley & Sons},
+  year=2010
 }
 
-@article{erikson1979,
+@article{erikson:1979,
   title={Intergenerational class mobility in three {W}estern {E}uropean societies: {E}ngland, {F}rance and {S}weden},
-  author={Erikson, Robert and Goldthorpe, John H and Portocarero, Lucienne},
+  author={Erikson, R. and Goldthorpe, J.H. and Portocarero, L.},
   journal={The British Journal of Sociology},
-  volume={30},
-  number={4},
-  pages={415--441},
-  year={1979},
+  volume=30,
+  number=4,
+  pages={415-441},
   publisher={JSTOR},
-  doi={https://doi.org/10.2307/589632}
+  doi={https://doi.org/10.2307/589632},
+  year=1979
 }
 
-@Manual{rsoftware,
+@Manual{rsoftware:2019,
   title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
+  author = {R Core Team},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2019},
   url = {https://www.R-project.org/},
+  year = 2019,
 }
 
-@Manual{dplyr,
+@Manual{dplyr:2019,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain Fran?ois and Lionel Henry and Kirill M?ller},
-  year = {2019},
+  author = {Hadley, W. and Romain, F. and Lionel, H. and Kirill, M.},
   note = {R package version 0.8.3},
   url = {https://CRAN.R-project.org/package=dplyr},
+  year = 2019
 }
 
 
-@Misc{ordinal,
+@Misc{ordinal:2019,
   title = {ordinal---Regression Models for Ordinal Data },
   author = {R. H. B. Christensen},
-  year = {2019},
   note = {R package version 2019.4-25},
   url = {http://www.cran.r-project.org/package=ordinal/},
+  year = 2019
 }
 
