--- a/paper.bib
+++ b/paper.bib
@@ -3,7 +3,6 @@
   author={Genolini, C. and Falissard, B},
   journal={Computational Statistics},
   volume=2,
-  number=3,
   pages={317-328},
   year=2011
 }
@@ -13,115 +12,15 @@
   author={Curman, A.S.N. and Andresen, M.A. and Brantingham, P.J.},
   journal={Journal of Quantitative Criminology},
   volume=31,
-  number=1,
   pages={127-147},
   year=2015
 }
 
-@article{Andresen:2017,
-  title={The trajectories of crime at places: understanding the patterns of disaggregated crime types},
-  author={Andresen, MA. and Curman, AS. and Linning, SJ.},
-  journal={Journal of Quantitative Criminology},
-  volume=33,
-  number=3,
-  pages={427-449},
-  year=2017
-}
-
-@article{Weisburd:2004,
-  title={Trajectories of Crime at Places: A Longitudinal Study of Street Segments in the City of Seattle},
-  author={Weisburd, D. and Bushway, S. and Lum, C. and Yang, S.},
-  journal={Criminology},
-  volume=42,
-  number=2,
-  pages={283-322},
-  year=2004
-}
-
-@article{Chavez:2009,
-  title={Neighborhood dynamics of urban violence: Understanding the immigration connection},
-  author={Chavez, J.M. and Griffiths, E.},
-  journal={Homicide Studies},
-  volume=13,
-  number=3,
-  pages={261-273},
-  year=2009
-}
-
-@article{Bannister:2017,
-  title={Local variance in the crime drop: A longitudinal study of neighbourhoods in greater Glasgow, Scotland},
-  author={Bannister, J. and Bates, E. and Kearns, A.},
-  journal={British Journal of Criminology},
-  volume=58,
-  number=1,
-  pages={177-199},
-  year=2017
-}
-
-@article{Eze:2019,
-  title={Exploring the longitudinal dynamics of herd BVD antibody test results using model-based clustering},
-  author={Eze, J.I. and Innocent, G.T. and Adam, K. and Huntley, S. and Gunn, G.J.},
-  journal={Scientific Reports},
-  volume=3,
-  number=11353,
-  pages={1-10},
-  year=2019
-}
-
-@article{Griffith:2004,
-  title={Communities, street guns and homicide trajectories in Chicago, 1980-1995: merging methods for examining homicide trends across space and time},
-  author={Griffiths, E. and Chavez, JM.},
-  journal={Criminology},
-  volume=42,
-  number=4,
-  pages={941-978},
-  year=2004
-}
-
-@article{Celeux:1992,
-  title={A classification EM algorithm for clustering and two stochastic versions},
-  author={Celeux, G. and Govaert, G.},
-  journal={Journal of Computational Statistics and Data Analysis},
-  volume=14,
-  number=3,
-  pages={315-332},
-  year=1992
-}
-
-@article{Calinski:1974,
-  title={A dendrite method for cluster analysis},
-  author={Calinski, T. and Harabasz, J.},
-  journal={Communications in Statistics-theory and Methods},
-  volume=3,
-  number=1,
-  pages={1-27},
-  year=1974
-}
-
-@article{Rousseeuw:1987,
-  title={Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
-  author={Rousseeuw, PJ.},
-  journal={Journal of Computational and Applied Mathematics},
-  number=20,
-  pages={53-65},
-  year=1987
-}
-
-@Book{ggplot2:2016,
-  author = {Hadley Wickham},
-  title = {ggplot2: Elegant Graphics for Data Analysis},
-  publisher = {Springer-Verlag New York},
-  isbn = {9783319242774},
-  url = {https://ggplot2.tidyverse.org},
-  year = 2016,
-}
-
 @article{Tarpey:2003,
   title={Clustering functional data}
-  author={Tarpey, T. and Kinateder, KKJ.},
+  author={Tarpey, T. and Kinateder, K.K.J.},
   journal={Journal of Classification},
   volume=20,
-  number=1,
   pages={93-114},
   year=2003
 }
@@ -144,49 +43,82 @@
   year = 2007
 }
 
-@book{agresti:2010,
-  title={Analysis of ordinal categorical data},
-  author={Agresti, A.},
-  volume=656,
-  publisher={John Wiley & Sons},
-  year=2010
+@article{Griffith:2004,
+  title={Communities, street guns and homicide trajectories in Chicago, 1980-1995: merging methods for examining homicide trends across space and time},
+  author={Griffiths, E. and Chavez, J.M.},
+  journal={Criminology},
+  volume=42,
+  pages={941-978},
+  year=2004
 }
 
-@article{erikson:1979,
-  title={Intergenerational class mobility in three {W}estern {E}uropean societies: {E}ngland, {F}rance and {S}weden},
-  author={Erikson, R. and Goldthorpe, J.H. and Portocarero, L.},
-  journal={The British Journal of Sociology},
-  volume=30,
-  number=4,
-  pages={415-441},
-  publisher={JSTOR},
-  doi={https://doi.org/10.2307/589632},
-  year=1979
+@article{Andresen:2017,
+  title={The trajectories of crime at places: understanding the patterns of disaggregated crime types},
+  author={Andresen, M.A. and Curman, A.S. and Linning, S.J.},
+  journal={Journal of Quantitative Criminology},
+  volume=33,
+  pages={427-449},
+  year=2017
 }
 
-@Manual{rsoftware:2019,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {R Core Team},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  url = {https://www.R-project.org/},
-  year = 2019,
+@article{Weisburd:2004,
+  title={Trajectories of Crime at Places: A Longitudinal Study of Street Segments in the City of Seattle},
+  author={Weisburd, D. and Bushway, S. and Lum, C. and Yang, S.},
+  journal={Criminology},
+  volume=42,
+  pages={283-322},
+  year=2004
 }
 
-@Manual{dplyr:2019,
-  title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley, W. and Romain, F. and Lionel, H. and Kirill, M.},
-  note = {R package version 0.8.3},
-  url = {https://CRAN.R-project.org/package=dplyr},
-  year = 2019
+@article{Chavez:2009,
+  title={Neighborhood dynamics of urban violence: Understanding the immigration connection},
+  author={Chavez, J.M. and Griffiths, E.},
+  journal={Homicide Studies},
+  volume=13,
+  pages={261-273},
+  year=2009
 }
 
-
-@Misc{ordinal:2019,
-  title = {ordinal---Regression Models for Ordinal Data },
-  author = {R. H. B. Christensen},
-  note = {R package version 2019.4-25},
-  url = {http://www.cran.r-project.org/package=ordinal/},
-  year = 2019
+@article{Bannister:2017,
+  title={Local variance in the crime drop: A longitudinal study of neighbourhoods in greater Glasgow, Scotland},
+  author={Bannister, J. and Bates, E. and Kearns, A.},
+  journal={British Journal of Criminology},
+  volume=58,
+  pages={177-199},
+  year=2017
 }
 
+@article{Celeux:1992,
+  title={A classification EM algorithm for clustering and two stochastic versions},
+  author={Celeux, G. and Govaert, G.},
+  journal={Journal of Computational Statistics and Data Analysis},
+  volume=14,
+  pages={315-332},
+  year=1992
+}
+
+@article{Calinski:1974,
+  title={A dendrite method for cluster analysis},
+  author={Calinski, T. and Harabasz, J.},
+  journal={Communications in Statistics-theory and Methods},
+  volume=3,
+  pages={1-27},
+  year=1974
+}
+
+@article{Rousseeuw:1987,
+  title={Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
+  author={Rousseeuw, P.J.},
+  journal={Journal of Computational and Applied Mathematics},
+  pages={53-65},
+  year=1987
+}
+
+@Book{ggplot:2016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  isbn = {9783319242774},
+  url = {https://ggplot2.tidyverse.org},
+  year = 2016
+}
