--- a/paper.bib
+++ b/paper.bib
@@ -15,3 +15,110 @@
   pages={127-147},
   year=2015
 }
+
+@article{Tarpey:2003,
+  title={Clustering functional data}
+  author={Tarpey, T. and Kinateder, K.K.J.},
+  journal={Journal of Classification},
+  volume=20,
+  pages={93-114},
+  year=2003
+}
+
+@Book{Boor:1978,
+  author = {De Boor, C.},
+  title = {A Practical Guide to Splines},
+  publisher = {Springer-Verlag New York},
+  isbn = {9780387953663},
+  url = {https://www.springer.com/gp/book/9780387953663},
+  year = 1978
+}
+
+@Book{Schumaker:2007,
+  author = {Schumaker, L.L.},
+  title = {Spline Functions: Basic Theory},
+  publisher = {Cambridge University Press},
+  isbn = {9780521705127},
+  url = {https://doi.org/10.1017/CBO9780511618994},
+  year = 2007
+}
+
+@article{Griffith:2004,
+  title={Communities, street guns and homicide trajectories in Chicago, 1980-1995: merging methods for examining homicide trends across space and time},
+  author={Griffiths, E. and Chavez, J.M.},
+  journal={Criminology},
+  volume=42,
+  pages={941-978},
+  year=2004
+}
+
+@article{Andresen:2017,
+  title={The trajectories of crime at places: understanding the patterns of disaggregated crime types},
+  author={Andresen, M.A. and Curman, A.S. and Linning, S.J.},
+  journal={Journal of Quantitative Criminology},
+  volume=33,
+  pages={427-449},
+  year=2017
+}
+
+@article{Weisburd:2004,
+  title={Trajectories of Crime at Places: A Longitudinal Study of Street Segments in the City of Seattle},
+  author={Weisburd, D. and Bushway, S. and Lum, C. and Yang, S.},
+  journal={Criminology},
+  volume=42,
+  pages={283-322},
+  year=2004
+}
+
+@article{Chavez:2009,
+  title={Neighborhood dynamics of urban violence: Understanding the immigration connection},
+  author={Chavez, J.M. and Griffiths, E.},
+  journal={Homicide Studies},
+  volume=13,
+  pages={261-273},
+  year=2009
+}
+
+@article{Bannister:2017,
+  title={Local variance in the crime drop: A longitudinal study of neighbourhoods in greater Glasgow, Scotland},
+  author={Bannister, J. and Bates, E. and Kearns, A.},
+  journal={British Journal of Criminology},
+  volume=58,
+  pages={177-199},
+  year=2017
+}
+
+@article{Celeux:1992,
+  title={A classification EM algorithm for clustering and two stochastic versions},
+  author={Celeux, G. and Govaert, G.},
+  journal={Journal of Computational Statistics and Data Analysis},
+  volume=14,
+  pages={315-332},
+  year=1992
+}
+
+@article{Calinski:1974,
+  title={A dendrite method for cluster analysis},
+  author={Calinski, T. and Harabasz, J.},
+  journal={Communications in Statistics-theory and Methods},
+  volume=3,
+  pages={1-27},
+  year=1974
+}
+
+@article{Rousseeuw:1987,
+  title={Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
+  author={Rousseeuw, P.J.},
+  journal={Journal of Computational and Applied Mathematics},
+  pages={53-65},
+  year=1987
+}
+
+@Book{ggplot:2016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  isbn = {9783319242774},
+  url = {https://ggplot2.tidyverse.org},
+  year = 2016
+}
