--- a/paper.bib
+++ b/paper.bib
@@ -15,3 +15,22 @@
   pages={127-147},
   year=2015
 }
+
+@article{Tarpey:2003,
+  title={Clustering functional data}
+  author={Tarpey, T. and Kinateder, K.K.J.},
+  journal={Journal of Classification},
+  volume=20,
+  pages={93-114},
+  year=2003
+}
+
+@Book{Boor:1978,
+  author = {De Boor, C.},
+  title = {A Practical Guide to Splines},
+  publisher = {Springer-Verlag New York},
+  isbn = {9780387953663},
+  url = {https://www.springer.com/gp/book/9780387953663},
+  year = 1978
+}
+
