--- a/paper.bib
+++ b/paper.bib
@@ -17,7 +17,7 @@
 }
 
 @article{Tarpey:2003,
-  title={Clustering functional data}
+  title={Clustering functional data},
   author={Tarpey, T. and Kinateder, K.K.J.},
   journal={Journal of Classification},
   volume=20,
